--- a/tools/job_pod_template.yaml
+++ b/tools/job_pod_template.yaml
@@ -4,7 +4,7 @@ kind: Pod
 
 metadata:
 #set name as the JOBNAME
-  name: vk-nersc
+  name: vk-jiriaf
 spec:
   containers:
   - name: test-shell
@@ -14,10 +14,10 @@ spec:
       # - "echo 'apptainer run docker://sylabsio/lolcow:latest' > $HOME/hostpipe/vk-cmd" # for apptainer, pipe needed. (ifarm)
 
       # Case: jiriaf or my linux - Docker, no access to $HOME, pipe needed, hostnetwork needed, define env on docker:  
-      # - "echo 'docker run godlovedc/lolcow:latest' > /root/hostpipe/vk-cmd" # for docker, pipe needed.
+      - "echo 'docker run godlovedc/lolcow:latest' > /root/hostpipe/vk-cmd" # for docker, pipe needed.
 
       # Case: NERSC - Shifter, access to $HOME, pipe needed (no mount needed), access hostnetwork directly, define env on host shell:
-      - "echo 'shifter --image=godlovedc/lolcow:latest --entrypoint' > $HOME/hostpipe/vk-cmd"
+      # - "echo 'shifter --image=godlovedc/lolcow:latest --entrypoint' > $HOME/hostpipe/vk-cmd"
 
 
       #other
@@ -25,7 +25,7 @@ spec:
 
  
   nodeSelector:
-    kubernetes.io/hostname: vk-nersc #JOBNAME
+    kubernetes.io/hostname: vk-jiriaf #JOBNAME
 
   tolerations:
   - key: "virtual-kubelet.io/provider"
