--- a/tools/job_pod_template.yaml
+++ b/tools/job_pod_template.yaml
@@ -13,7 +13,7 @@ spec:
       # - "echo 'apptainer run docker://sylabsio/lolcow:latest' > $HOME/hostpipe/vk-cmd" # for apptainer, pipe needed. (ifarm)
 
       # Case: jiriaf or my linux - Docker, no access to $HOME, pipe needed, hostnetwork needed, define env on docker:  
-      # - "echo 'docker run godlovedc/lolcow:latest' > /root/hostpipe/vk-cmd" # for docker, pipe needed.
+      # - "echo 'docker run --memory=500Mi godlovedc/lolcow:latest' > /root/hostpipe/vk-cmd" # for docker, pipe needed.
 
       # Case: NERSC - Shifter, access to $HOME, pipe needed (no mount needed), access hostnetwork directly, define env on host shell:
       # - "echo 'shifter --image=godlovedc/lolcow:latest --entrypoint' > $HOME/hostpipe/vk-cmd"
