recover the devcontainer.json, and add init.sh

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -24,13 +24,7 @@
 	// "forwardPorts": [],
 
 	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": [
-		"kind create cluster", "cp ~/.kube/config /workspaces/vk-cmd/docker/images/base/activate/apiserver", 
-		"cd /workspaces/vk-cmd/docker/images/base/Makefile", "make quick",
-		"export NODENAME='vk-prom'",
-		"sh /workspaces/vk-cmd/tools/pipeline/build_pipline_host.sh",
-	],
-
+	// "postCreateCommand": "sudo usermod -aG docker vscode",
 	// Configure tool-specific properties.
 	// "customizations": {},
 
