--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -9,7 +9,8 @@
 		"ghcr.io/devcontainers/features/docker-in-docker:2": {},
 		"ghcr.io/devcontainers/features/go:1": {},
 		"ghcr.io/devcontainers-contrib/features/kind:1": {},
-		"ghcr.io/devcontainers-contrib/features/kubectl-asdf:2": {}
+		"ghcr.io/devcontainers-contrib/features/kubectl-asdf:2": {},
+		"ghcr.io/devcontainers-contrib/features/prometheus:1": {}
 	},
 	"customizations": {
 		"vscode": {
