--- a/tools/job_pod_template.yaml
+++ b/tools/job_pod_template.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: Pod
 metadata:
 #set name as the JOBNAME
-  name: job-name
+  name: stress
 spec:
   containers:
   - name: test-shell
@@ -13,13 +13,15 @@ spec:
       # - "echo 'apptainer run docker://sylabsio/lolcow:latest' > $HOME/hostpipe/vk-cmd" # for apptainer, pipe needed. (ifarm)
 
       # Case: jiriaf or my linux - Docker, no access to $HOME, pipe needed, hostnetwork needed, define env on docker:  
-      # - "echo 'docker run --memory=500Mi godlovedc/lolcow:latest' > /root/hostpipe/vk-cmd" # for docker, pipe needed.
+      # - "echo 'docker run godlovedc/lolcow:latest && sleep 100' > /root/hostpipe/vk-cmd" # for docker, pipe needed.
+      - "echo 'docker run stress:v1.0' > /root/hostpipe/vk-cmd" # for docker, pipe needed.
+
 
       # Case: NERSC - Shifter, access to $HOME, pipe needed (no mount needed), access hostnetwork directly, define env on host shell:
       # - "echo 'shifter --image=godlovedc/lolcow:latest --entrypoint' > $HOME/hostpipe/vk-cmd"
 
       #other
-      - "ls -l . > ~/test.txt && sleep 1000"
+      # - "ls -l . > ~/test.txt && sleep 1000"
     resources:
       limits: 
         cpu: 1 #upper limit
