This test image has been uploaded to jlabtsai/stress:v20231026

--- a/prom/test-app/stress/Dockerfile
+++ b/prom/test-app/stress/Dockerfile
@@ -6,5 +6,10 @@ FROM alpine:3.12
 #install stress
 RUN apk add stress-ng
 
-# ENTRYPOINT ["stress-ng", "-c", "2", "--timeout", "300", "--metrics-brief", "&", "stress-ng", "-c", "1", "--timeout", "300", "--metrics-brief"]
-ENTRYPOINT ["stress-ng", "-c", "2", "--timeout", "300", "--metrics-brief", ]
+COPY stress.sh /stress.sh
+
+RUN chmod +x /stress.sh
+
+# Run stress.sh when the container launches
+ENTRYPOINT ["/stress.sh"]
+
