This is uploaded as jlabtsai/random:v20231026

--- a/prom/test-app/random/Dockerfile
+++ b/prom/test-app/random/Dockerfile
@@ -8,4 +8,5 @@ COPY gen-random.sh /gen-random.sh
 #run gen-random.sh when container launches
 RUN chmod +x /gen-random.sh
 
-CMD ["./gen-random.sh"]
+ENTRYPOINT ["/gen-random.sh"]
+
