use python to change config.yml

--- a/prom/catch-pids-in-container/docker/Dockerfile
+++ b/prom/catch-pids-in-container/docker/Dockerfile
@@ -16,12 +16,13 @@ RUN CGO_ENABLED=0 GOARCH=$TARGETARCH make build
 FROM base as run_process_exporter
 COPY --from=process_exporter_build /go/src/github.com/ncabatoff/process-exporter/process-exporter /bin/process-exporter
 COPY config.yml /config.yml 
+# copy python.py
 COPY exe.sh /exe.sh
 RUN chmod +x /exe.sh
 
 
 FROM scratch
 COPY --from=run_process_exporter / /
-ENTRYPOINT ["/exe.sh"]
+ENTRYPOINT ["/exe.sh"] 
 
 #------------------ Above is from procee-exporter ------------------
