--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -10,7 +10,9 @@
 		"ghcr.io/devcontainers/features/go:1": {},
 		"ghcr.io/devcontainers-contrib/features/kind:1": {},
 		"ghcr.io/devcontainers-contrib/features/kubectl-asdf:2": {},
-		"ghcr.io/devcontainers-contrib/features/prometheus:1": {}
+		"ghcr.io/devcontainers-contrib/features/prometheus:1": {},
+		"ghcr.io/devcontainers/features/anaconda:1": {},
+		"ghcr.io/devcontainers/features/python:1": {}
 	},
 	"customizations": {
 		"vscode": {
