--- a/prom/prometheus.yml
+++ b/prom/prometheus.yml
@@ -10,5 +10,5 @@ scrape_configs:
   # add process exporter
 - job_name: 'process_exporter'
   static_configs:
-  - targets: ['localhost:1911']
+  - targets: ['localhost:1911', 'localhost:1913']
   
