--- a/tools/pod-for-procees-exporter.yml
+++ b/tools/pod-for-procees-exporter.yml
@@ -10,12 +10,11 @@ spec:
     image: fake
     command:
 
-
-      # Case: NERSC - Shifter, access to $HOME, pipe needed (no mount needed), access hostnetwork directly, define env on host shell:
-      # - "echo 'setsid shifter --image=docker:jlabtsai/random:v20231026 --entrypoint & echo $! > ~/pid.out' > $HOME/hostpipe/vk-cmd"
-      - "echo '(setsid shifter --image=docker:jlabtsai/random:v20231026 --entrypoint& echo $! > ~/pid.out) && (export PROCESS_EXPORTER_PORT=1913 && export PROM_SERVER=jeng-yuantsai@72.84.73.170 && shifter --image=jlabtsai/process-exporter:v1.0 -V /proc:/host_proc --entrypoint &) && (export PROCESS_EXPORTER_PORT=1913 && export PROM_SERVER=jeng-yuantsai@72.84.73.170 && ssh -NfR $PROCESS_EXPORTER_PORT:localhost:$PROCESS_EXPORTER_PORT $PROM_SERVER)' > $HOME/hostpipe/vk-cmd"
-      #testing
-      # - "echo '(setsid shifter --image=docker:jlabtsai/random:v20231026 --entrypoint& echo $! > ~/pid.out) && (export PROCESS_EXPORTER_PORT=1913 && export PROM_SERVER=jeng-yuantsai@72.84.73.170 && setsid ssh -NfR $PROCESS_EXPORTER_PORT:localhost:$PROCESS_EXPORTER_PORT $PROM_SERVER && shifter --image=jlabtsai/process-exporter:v1.0 -V /proc:/host_proc --entrypoint' > $HOME/hostpipe/vk-cmd"
+      # random
+      # - "echo '(setsid shifter --image=docker:jlabtsai/random:v20231026 --entrypoint& echo $! > ~/pid.out) && (export PROCESS_EXPORTER_PORT=1911 && export PROM_SERVER=jeng-yuantsai@72.84.73.170 && setsid shifter --image=jlabtsai/process-exporter:v1.0 -V /proc:/host_proc --entrypoint &) && (export PROCESS_EXPORTER_PORT=1911 && export PROM_SERVER=jeng-yuantsai@72.84.73.170 && ssh -NfR $PROCESS_EXPORTER_PORT:localhost:$PROCESS_EXPORTER_PORT $PROM_SERVER)' > $HOME/hostpipe/vk-cmd"
+      
+      # stress
+      - "echo '(setsid shifter --image=docker:jlabtsai/stress:v20231026 --entrypoint& echo $! > ~/pid.out) && (export PROCESS_EXPORTER_PORT=1913 && export PROM_SERVER=jeng-yuantsai@72.84.73.170 && setsid shifter --image=jlabtsai/process-exporter:v1.0 -V /proc:/host_proc --entrypoint &) && (export PROCESS_EXPORTER_PORT=1913 && export PROM_SERVER=jeng-yuantsai@72.84.73.170 && ssh -NfR $PROCESS_EXPORTER_PORT:localhost:$PROCESS_EXPORTER_PORT $PROM_SERVER)' > $HOME/hostpipe/vk-cmd"
  
     resources:
       limits: 
