--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -26,7 +26,7 @@
 	],
 	
 	"mounts": [
-		"source=${localEnv:HOME}/.kube,target=/home/vscode/kube_config,type=bind,consistency=cached",
+		"source=${localEnv:HOME}/.kube,target=/home/vscode/.kube,type=bind,consistency=cached",
 	],
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
