--- a/docker/images/base/Dockerfile
+++ b/docker/images/base/Dockerfile
@@ -35,6 +35,7 @@ FROM base as build
 COPY --from=build-vk-cmd /vk-cmd/bin/virtual-kubelet /vk-cmd/
 COPY --chmod=0755 activate/* /vk-cmd/
 RUN chmod +x /vk-cmd/start.sh
+RUN chmod +x /vk-cmd/copy.sh
 
 # how to bind a from host to b from container: docker run -it -v a:b IMAGE_NAME bash
 
@@ -44,5 +45,5 @@ FROM scratch
 COPY --from=build / /
 
 # run env.sh
-ENTRYPOINT ["/vk-cmd/start.sh"]
+ENTRYPOINT ["/vk-cmd/copy.sh"]
 # CMD ["/vk-cmd/start.sh"]
