--- a/tools/test-resources/Dockerfile
+++ b/tools/test-resources/Dockerfile
@@ -6,5 +6,8 @@ FROM alpine:3.12
 #install stress
 RUN apk add stress-ng
 
-# Run stress test
-ENTRYPOINT ["stress-ng", "-c", "2", "--timeout", "60", "--metrics-brief"]
+# # Run stress test
+# ENV NUMBER="2"
+# ENV TIME="60"
+
+ENTRYPOINT stress-ng --metrics-brief -c $NUMBER --timeout $TIME
