--- a/tools/job_pod_template.yaml
+++ b/tools/job_pod_template.yaml
@@ -1,37 +1,59 @@
-# write a pod to test the volume
+kind: ConfigMap
+apiVersion: v1
+metadata:
+  name: job1
+  namespace: default
+data:
+  stress.sh: |
+    #!/bin/bash
+    shifter --image="jlabtsai/stress:latest" --entrypoint
+
+---
+
 apiVersion: v1
 kind: Pod
 metadata:
-#set name as the JOBNAME
-  name: job-name
+  name: stress
 spec:
   containers:
-  - name: test-shell
-    image: fake
-    command:
-      # Case: ifarm - Apptainer, access to $HOME, pipe needed (no need to mount pipe, just access to ~/hostpipe/vk-cmd), access hostnework directly, define env on host shell:
-      # - "echo 'apptainer run docker://sylabsio/lolcow:latest' > $HOME/hostpipe/vk-cmd" # for apptainer, pipe needed. (ifarm)
+    - name: job1
+      image: job1
+      command: ["/bin/bash", "-c"]
+      args: ["bash $workdir/stress.sh >> $workdir/stdout 2>> $workdir/stderr"]
+      env:
+        - name: NUMBER
+          value: "3"
+        - name: TIME
+          value: "60"
+        - name: workdir
+          value: "~/stress/job1"
 
-      # Case: jiriaf or my linux - Docker, no access to $HOME, pipe needed, hostnetwork needed, define env on docker:  
-      # - "echo 'docker run --memory=500Mi godlovedc/lolcow:latest' > /root/hostpipe/vk-cmd" # for docker, pipe needed.
+      volumeMounts:
+        - name: job1
+          mountPath: ~/stress/job1
+        - name: pgid-1
+          mountPath: ~/stress/job1/pgid
 
-      # Case: NERSC - Shifter, access to $HOME, pipe needed (no mount needed), access hostnetwork directly, define env on host shell:
-      # - "echo 'shifter --image=godlovedc/lolcow:latest --entrypoint' > $HOME/hostpipe/vk-cmd"
+      resources:
+        limits:
+          cpu: "1"
+          memory: 1Gi
 
-      #other
-      - "ls -l . > ~/test.txt && sleep 1000"
-    resources:
-      limits: 
-        cpu: 1 #upper limit
-        # memory: 500Mi
-      requests:
-        cpu: 1 #lower limit
-        # memory: 200Mi
- 
-# dont use control-plane node
+
+  volumes:
+    - name: job1 
+      configMap:
+        name: job1
+    - name: pgid-1
+      emptyDir: {}
+
+        
   nodeSelector:
     kubernetes.io/role: agent
   tolerations:
-  - key: "virtual-kubelet.io/provider"
-    value: "mock"
-    effect: "NoSchedule"
+    - key: "virtual-kubelet.io/provider"
+      value: "mock"
+      effect: "NoSchedule"
+
+
+---
