--- a/tools/k8s-job-script/job_pod_template.yaml
+++ b/tools/k8s-job-script/job_pod_template.yaml
@@ -41,12 +41,12 @@ metadata:
 data:
   test.sh: |
     #!/bin/bash
-    # while true; do
-    #   dat
-    #   echo "test"
-    #   sleep 3
-    # done
-    sleep 40 && dat
+    ## Test start of containers:
+    dat
+    # date
+    # Test conflict of start and getpod:
+    # sleep $1 && dat
+    # sleep $1 && date
 
 ---
 
@@ -54,13 +54,13 @@ data:
 apiVersion: v1
 kind: Pod
 metadata:
-  name: new-test-pod
+  name: test-pod
 spec:
   containers:
     - name: job1
       image: test
       command: ["bash"]
-      args: ["30", "2"]
+      args: ["10", "2"]
       volumeMounts:
         - name: test
           mountPath: stress/job1
@@ -68,17 +68,17 @@ spec:
         limits:
           cpu: "1"
           memory: 1Gi
-    - name: job2
-      image: direct-stress
-      command: ["bash"]
-      args: ["10", "2"]
-      volumeMounts:
-        - name: direct-stress
-          mountPath: stress/job2
-      resources:
-        limits:
-          cpu: "1"
-          memory: 1Gi
+    # - name: job2
+    #   image: direct-stress
+    #   command: ["bash"]
+    #   args: ["10", "2"]
+    #   volumeMounts:
+    #     - name: direct-stress
+    #       mountPath: stress/job2
+    #   resources:
+    #     limits:
+    #       cpu: "1"
+    #       memory: 1Gi
   volumes:
     - name: direct-stress 
       configMap:
