Add Kubernetes job pod template for Docker

--- a/tools/k8s-job-script/job_pod_template_docker.yaml
+++ b/tools/k8s-job-script/job_pod_template_docker.yaml
@@ -5,7 +5,26 @@ metadata:
 data:
   stress.sh: |
     #!/bin/bash
-    docker run -d --rm -e NUMBER=$2 -e TIME=$1 jlabtsai/stress:latest
+
+    export PGID_FILE=$3
+    docker run -d --rm -e NUMBER=$2 -e TIME=$1 jlabtsai/stress:latest > /dev/null
+    ## find the last container id
+    export CONTAINER_ID=$(docker ps -l -q)
+    docker inspect -f '{{.State.Pid}}' $CONTAINER_ID > $3
+    sleep $1
+
+---
+
+kind: ConfigMap
+apiVersion: v1
+metadata:
+  name: get-pgid
+data:
+  stress.sh: |
+    #!/bin/bash
+
+    sleep 10
+    cp $1 $2
 
 ---
 
@@ -13,13 +32,13 @@ data:
 apiVersion: v1
 kind: Pod
 metadata:
-  name: SomeName # Job Name Here
+  name: p # Job Name Here
 spec:
   containers:
     - name: c1
       image: docker-stress
       command: ["bash"]
-      args: ["300", "2"] # Time and cpu should go here
+      args: ["600", "2", "~/p/containers/c1/p"] # Time and cpu should go here
       volumeMounts:
         - name: docker-stress
           mountPath: stress/job1
@@ -30,9 +49,27 @@ spec:
         requests:
           cpu: "1" # Number of CPUs Here as well
           memory: 1Gi # Memory Here 
-    - name: docker-stress 
+    - name: c2
+      image: get-pgid
+      command: ["bash"]
+      args: ["~/p/containers/c1/p", "~/p/containers/c1/pgid"] # Time and cpu should go here
+      volumeMounts:
+        - name: get-pgid
+          mountPath: get-pgid
+      resources:
+        limits:
+          cpu: "2"
+          memory: 1Gi
+        requests:
+          cpu: "1" # Number of CPUs Here as well
+          memory: 1Gi # Memory Here 
+  volumes:
+    - name: docker-stress
       configMap:
         name: docker-stress
+    - name: get-pgid
+      configMap:
+        name: get-pgid
   nodeSelector:
     kubernetes.io/role: agent
   affinity:
@@ -47,7 +84,7 @@ spec:
           - key: jiriaf.site
             operator: In
             values:
-            - "Local"
+            - "mylin"
   tolerations:
     - key: "virtual-kubelet.io/provider"
       value: "mock"
