--- a/tools/k8s-job-script/job_pod_template_docker.yaml
+++ b/tools/k8s-job-script/job_pod_template_docker.yaml
@@ -5,7 +5,6 @@ metadata:
 data:
   stress.sh: |
     #!/bin/bash
-
     export PGID_FILE=$3
     docker run -d --rm -e NUMBER=$2 -e TIME=$1 jlabtsai/stress:latest > /dev/null
     ## find the last container id
@@ -22,8 +21,7 @@ metadata:
 data:
   stress.sh: |
     #!/bin/bash
-
-    sleep 10
+    sleep 3
     cp $1 $2
 
 ---
@@ -32,16 +30,16 @@ data:
 apiVersion: v1
 kind: Pod
 metadata:
-  name: p # Job Name Here
+  name: some-name # Job Name Here
 spec:
   containers:
     - name: c1
       image: docker-stress
       command: ["bash"]
-      args: ["600", "2", "~/p/containers/c1/p"] # Time and cpu should go here
+      args: ["300", "2", "~/p/containers/c1/p"] # Time and cpu should go here
       volumeMounts:
         - name: docker-stress
-          mountPath: stress/job1
+          mountPath: docker-stress
       resources:
         limits:
           cpu: "2"
@@ -84,7 +82,7 @@ spec:
           - key: jiriaf.site
             operator: In
             values:
-            - "mylin"
+            - "Local"
   tolerations:
     - key: "virtual-kubelet.io/provider"
       value: "mock"
